[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/PlayerBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://SinglePlayerWorld/LevelScenes/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://Player/PlayerHUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Player.gd" type="Script" id=8]
[ext_resource path="res://Resources/fonts/poco/Poco.ttf" type="DynamicFontData" id=20]

[sub_resource type="DynamicFont" id=1]
size = 43
extra_spacing_top = -18
extra_spacing_bottom = 7
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0941176, 0.596078, 0.0784314, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0941176, 0.596078, 0.0784314, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 5
expand_margin_left = 2.0

[node name="Player" type="Node2D"]
script = ExtResource( 8 )

[node name="PlayerBody" parent="." instance=ExtResource( 1 )]
position = Vector2( 448, -112 )

[node name="Username" type="Label" parent="PlayerBody"]
margin_left = -63.0
margin_top = -128.0
margin_right = 65.0
margin_bottom = -83.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Player"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 448, -112 )
zoom = Vector2( 1.8, 1.8 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.0
drag_margin_right = 0.3
drag_margin_bottom = 0.8
editor_draw_drag_margin = true
script = ExtResource( 4 )

[node name="Level1" parent="." instance=ExtResource( 2 )]

[connection signal="update_highscore" from="." to="." method="_on_Player_update_highscore"]
[connection signal="player_moved" from="PlayerBody" to="PlayerCamera" method="_on_PlayerBody_player_moved"]
[connection signal="restarted" from="PlayerBody" to="HUD" method="_on_PlayerBody_restarted"]
[connection signal="restarted" from="PlayerBody" to="PlayerCamera" method="_on_PlayerBody_restarted"]
[connection signal="switched_direction" from="PlayerBody" to="HUD" method="_on_PlayerBody_switched_direction"]
[connection signal="exit_game" from="HUD" to="." method="_on_HUD_exit_game"]
[connection signal="restart_game" from="HUD" to="PlayerBody" method="_on_HUD_restart_game"]
[connection signal="update_highscore" from="HUD" to="." method="_on_HUD_update_highscore"]
