[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/textures/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Player/TileDrawer.gd" type="Script" id=3]
[ext_resource path="res://Player/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://PlayerHUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/MusicPlayer.gd" type="Script" id=6]
[ext_resource path="res://Resources/music/StumpAndJumpStage1.wav" type="AudioStream" id=7]

[node name="World" type="Node2D"]
position = Vector2( 0, 608 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 560, -136 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 8 )
cell_quadrant_size = 24
cell_tile_origin = 1
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0 )
script = ExtResource( 3 )

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 560, -136 )
current = true
zoom = Vector2( 2, 2 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.5
drag_margin_top = 0.3
drag_margin_right = 0.5
drag_margin_bottom = 0.3
editor_draw_drag_margin = true
script = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -11.361
script = ExtResource( 6 )

[connection signal="player_moved" from="Player2" to="TileMap" method="_on_player_moved"]
[connection signal="player_moved" from="Player2" to="PlayerCamera" method="_on_Player2_player_moved"]
[connection signal="restarted" from="Player2" to="TileMap" method="_on_Player2_restarted"]
[connection signal="restarted" from="Player2" to="PlayerCamera" method="_on_Player2_restarted"]
[connection signal="restarted" from="Player2" to="HUD" method="_on_Player2_restarted"]
[connection signal="show_restart_button" from="Player2" to="HUD" method="_on_Player2_show_restart_button"]
[connection signal="switched_direction" from="Player2" to="HUD" method="_on_Player2_switched_direction"]
[connection signal="missed_next_tile" from="TileMap" to="Player2" method="_on_TileMap_missed_next_tile"]
[connection signal="missed_next_tile" from="TileMap" to="PlayerCamera" method="_on_TileMap_missed_next_tile"]
[connection signal="missed_next_tile" from="TileMap" to="HUD" method="_on_TileMap_missed_next_tile"]
[connection signal="update_counter" from="TileMap" to="HUD" method="_on_TileMap_update_counter"]
[connection signal="mute" from="HUD" to="MusicPlayer" method="_on_HUD_mute"]
[connection signal="restart_game" from="HUD" to="Player2" method="_on_HUD_restart_game"]
[connection signal="restart_game" from="HUD" to="MusicPlayer" method="_on_HUD_restart_game"]
[connection signal="start_game" from="HUD" to="Player2" method="_on_HUD_start_game"]
[connection signal="start_game" from="HUD" to="PlayerCamera" method="_on_HUD_start_game"]
[connection signal="start_game" from="HUD" to="MusicPlayer" method="_on_HUD_start_game"]
